# bazel-kernel-build-example

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.kernel  README.md  WORKSPACE  config  flake.nix  shell.nix
lib/: BUILD.bazel  Makefile.tpl  defs.bzl  fileset.bzl  makefile.bzl
nix/: 01.kleaf.patch  02.bazel_common_rules.patch  BUILD.bazel  bazel.nix  build.config.aarch64.nix  build.config.x86_64  build.config.x86_64.nix  nixpkgs.nix
oot/: BUILD.bazel  Makefile.tpl  hello.c
oot/src/: hello.c
