load("@kleaf//common/kleaf:kernel.bzl", "kernel_module")
load("//lib:fileset.bzl", "fileset")
load("//lib:makefile.bzl", "makefile")

fileset(
    name = "headers",
    srcs = [
        "public_include/hello.h",
    ],
    mappings = {
        "public_include/": "include/drivers/",
    },
)

makefile(
    name = "makefile",
    srcs = [
        "src/hello.c",
    ],
    flags = [
        "ccflags-y += -Werror",
        "ccflags-y += -Wno-error=deprecated-declarations",
    ],
    module_name = "hello",
    output_file = "Makefile",
    strip_include_paths = [
        "drivers",
    ],
    deps = [
        ":headers",
    ],
)

kernel_module(
    name = "hello",
    srcs = [
        "src/hello.c",
        ":include/drivers/hello.h",
    ],
    kernel_build = "@linux//:kernel",
    makefile = ":Makefile",
)
